# step-by-step

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __main__.py  agents.py  claude.py  git.py  models.py  pipeline.py  prompts.py  runner.py  runner_steps.py  stages.py  styles.tcss  tui.py  widgets.py  workers.py
components/: git_tool.py  validator.py
flows/: dev_pipeline.json
npm/: README.md  package.json
prompts/: code_generation.txt  review.txt  test_generation.txt
scripts/: export_flow.sh  serve_api.py  setup_flow.py  start.sh  test_components.py  test_pipeline.py
